re PR libfortran/31409 (Reading after ERROR_SHORT_RECORD)

2007-05-10  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/31409
	* io/transfer.c (read_block_direct): Backport from 4.3 trunk.

From-SVN: r124612